@@ -83,13 +83,12 @@ class ModelSingleton(ModelStorage):
         return res
 
     @classmethod
-    def default_get(cls, fields_names, with_rec_name=True,
-            with_on_change=True):
+    def default_get(cls, fields_names, with_rec_name=True):
         if '_timestamp' in fields_names:
             fields_names = list(fields_names)
             fields_names.remove('_timestamp')
         default = super(ModelSingleton, cls).default_get(fields_names,
-                with_rec_name=with_rec_name, with_on_change=with_on_change)
+                with_rec_name=with_rec_name)
         singleton = cls.get_singleton()
         if singleton:
             if with_rec_name:
